# painel-de-dados-logistico

./: .gitignore  README.md  app.py  etl.py  pyproject.toml
.streamlit/: config.toml
bd_relatorios/custos/2020/: custos_mensais_10_2020.csv  custos_mensais_11_2020.csv  custos_mensais_12_2020.csv  custos_mensais_1_2020.csv  custos_mensais_2_2020.csv  custos_mensais_3_2020.csv  custos_mensais_4_2020.csv  custos_mensais_5_2020.csv  custos_mensais_6_2020.csv  custos_mensais_7_2020.csv  custos_mensais_8_2020.csv  custos_mensais_9_2020.csv
bd_relatorios/custos/2021/: custos_mensais_10_2021.csv  custos_mensais_11_2021.csv  custos_mensais_12_2021.csv  custos_mensais_1_2021.csv  custos_mensais_2_2021.csv  custos_mensais_3_2021.csv  custos_mensais_4_2021.csv  custos_mensais_5_2021.csv  custos_mensais_6_2021.csv  custos_mensais_7_2021.csv  custos_mensais_8_2021.csv  custos_mensais_9_2021.csv
bd_relatorios/custos/2022/: custos_mensais_10_2022.csv  custos_mensais_11_2022.csv  custos_mensais_12_2022.csv  custos_mensais_1_2022.csv  custos_mensais_2_2022.csv  custos_mensais_3_2022.csv  custos_mensais_4_2022.csv  custos_mensais_5_2022.csv  custos_mensais_6_2022.csv  custos_mensais_7_2022.csv  custos_mensais_8_2022.csv  (+1 more)
bd_relatorios/feriados/: feriados_nacionais.csv
bd_relatorios/metas/: metas.csv
bd_relatorios/ocorrencias/: motivos_ocorrencia_2_2024.csv
bd_relatorios/veiculos/: cadastro_veiculo_2_2024.csv
dados/backup/: metas-2024-02-26T13-42-59.parquet
src/app/: compor_visualizacoes.py
src/congifuracao/: diretorios.py  variaveis.py
src/etl/: compor_etl.py
(+184 files in other folders)
